reorganized structure of 'test' file sub tree

--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -15,8 +15,9 @@ out gensrc:
 
 # Expands to commands which build a .cpp file
 # $1: file name of header file which has a precompiled version
+# $2: additional CXXFLAGS / CPPFLAGS
 define build_cpp
-	$(CXX) -include $1 $(CXXFLAGS) $(CPPFLAGS) -c -MD -o $@ $<
+	$(CXX) -include $1 $(CXXFLAGS) $(CPPFLAGS) $2 -c -MD -o $@ $<
 	@cp out/$*.d out/$*.P; \
 	sed -e 's/#.*//' -e 's/^[^:]*: *//' -e 's/ *\\$$//' \
 	  -e '/^$$/ d' -e 's/$$/ :/' <out/$*.d >>out/$*.P;
@@ -29,7 +30,9 @@ EFC_SRCS = driver.cpp parserext.cpp ast.cpp errorhandler.cpp objtype.cpp \
   astdefaultiterator.cpp env.cpp semanticanalizer.cpp irgen.cpp astprinter.cpp \
   efc.cpp executionengineadapter.cpp parserapiext.cpp
 
-EFC_OBJS = out/parser.o out/scanner.o $(patsubst %.cpp, out/%.o, $(EFC_SRCS))
+EFC_GEN_SRCS = parser.cpp scanner.cpp
+
+EFC_OBJS = $(patsubst %.cpp, out/%.o, $(EFC_SRCS) $(EFC_GEN_SRCS))
 
 efc: out/efc
 
@@ -68,12 +71,20 @@ out/efc: $(EFC_OBJS)
 # efctest
 # ----------------------------------------------------------------------
 
-EFCTEST_SRCS = errorhandlertest.cpp objtypetest.cpp parserexttest.cpp	\
+EFCTEST_ROOT_SRCS = gtestprinter.cpp test.cpp efctest.cpp
+
+EFCTEST_TESTS_SRCS = errorhandlertest.cpp objtypetest.cpp parserexttest.cpp	\
   scannertest.cpp scannerandparsertest.cpp astprintertest.cpp	\
   driversystemtest.cpp semanticanalizertest.cpp irgentest.cpp	\
-  gtestprinter.cpp test.cpp tutorialstest.cpp efctest.cpp
+  tutorialstest.cpp
 
-EFCTEST_OBJS = $(patsubst %.cpp, out/%.o, $(EFCTEST_SRCS))
+EFCTEST_TESTHELPERS_SRCS =
+
+EFCTEST_TESTS_TESTHELPERS_SRCS =
+
+EFCTEST_OBJS = $(patsubst %.cpp, out/%.o, \
+  $(EFCTEST_ROOT_SRCS) $(EFCTEST_TESTS_SRCS) $(EFCTEST_TESTHELPERS_SRCS) \
+  $(EFCTEST_TESTS_TESTHELPERS_SRCS))
 
 test efctest: out/efctest
 
@@ -87,7 +98,17 @@ test/efctest.h.pch: test/efctest.h efc.h.pch test/test.h
 
 # regarding the dependency to out/parser.o, see comment of bison's rule
 out/%.o: test/%.cpp test/efctest.h.pch out/parser.o | out
-	$(call build_cpp, test/efctest.h)
+	$(call build_cpp, test/efctest.h, -I test -I test/testhelpers)
+
+out/%.o: test/tests/%.cpp test/efctest.h.pch out/parser.o | out
+	$(call build_cpp, test/efctest.h, -I test -I test/testhelpers)
+
+out/%.o: test/testhelpers/%.cpp test/efctest.h.pch out/parser.o | out
+	$(call build_cpp, test/efctest.h, -I test -I test/testhelpers)
+
+out/%.o: test/tests/testhelpers/%.cpp test/efctest.h.pch out/parser.o | out
+	$(call build_cpp, test/efctest.h, -I test -I test/testhelpers)
+
 
 out/libgtest.a: ${GTEST_DIR}/src/gtest-all.cc
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -isystem ${GTEST_DIR}/include -I${GTEST_DIR} -pthread -c -o out/gtest-all.o $<
@@ -123,5 +144,8 @@ clean:
 .PHONY: all efc test efctest runtest runefctest
 
 -include $(EFC_SRCS:%.cpp=out/%.P)
--include $(EFCTEST_SRCS:%.cpp=out/%.P)
-
+-include $(EFC_GEN_SRCS:%.cpp=out/%.P)
+-include $(EFCTEST_ROOT_SRCS:%.cpp=out/%.P)
+-include $(EFCTEST_TESTS_SRCS:%.cpp=out/%.P)
+-include $(EFCTEST_TESTHELPERS_SRCS:%.cpp=out/%.P)
+-include $(EFCTEST_TESTS_TESTHELPERS_SRCS:%.cpp=out/%.P)
