--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -79,7 +79,7 @@ EFCTEST_TESTS_SRCS = errorhandlertest.cpp objtypetest.cpp parserexttest.cpp	\
   scannertest.cpp scannerandparsertest.cpp astprintertest.cpp	\
   driversystemtest.cpp semanticanalizertest.cpp irgentest.cpp	\
   tutorialstest.cpp tokenstreamlookaheadtest.cpp tokenfiltertest.cpp \
-  envtest.cpp objecttest.cpp
+	envtest.cpp objecttest.cpp asttest.cpp
 
 EFCTEST_TESTHELPERS_SRCS = literaltokenstream.cpp tokentesthelper.cpp
 
