entity: moved implementation from header to a new source file

--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -30,7 +30,7 @@ EFC_SRCS = driver.cpp parserext.cpp ast.cpp errorhandler.cpp objtype.cpp \
   astdefaultiterator.cpp env.cpp semanticanalizer.cpp irgen.cpp astprinter.cpp \
   efc.cpp executionengineadapter.cpp parserapiext.cpp tokenstreamlookahead.cpp \
   tokenfilter.cpp storageduration.cpp object.cpp envinserter.cpp \
-  signatureaugmentor.cpp irgenforwarddeclarator.cpp
+	signatureaugmentor.cpp irgenforwarddeclarator.cpp entity.cpp
 
 EFC_GEN_SRCS = parser.cpp scanner.cpp
 
