fix commit: build: add doxygen config and cmake target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ find_program(DOXYGEN doxygen)
 if (NOT DOXYGEN)
   message(WARNING "doxygen not found. With apt, you can install it with 'apt-get install doxygen'.")
 else()
-  # TODO: set INCLUDE_PATH in .doxygen in a generic way. No it contains absolut
+  # TODO: set INCLUDE_PATH in .doxygen in a generic way. Now it contains absolut
   # paths specific to my system.
   add_custom_target(doxygen
     COMMAND ${DOXYGEN} ${CMAKE_CURRENT_SOURCE_DIR}/.doxygen
